// Інтерфейс обробника змін проєкту
public interface IProjectChangeHandler {
    // Обробити зміну проекту
    void handleChange(ProjectChange c);
}
